--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 <body>
     <!-- header start -->
     <header>
-
+        <div class="header">
+            <div class="logo">
+                <img src="images/icons/logo.png" alt=""><span class="logo-title">Idea</span>
+            </div>
+            <div class="menu">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Works</a>
+                <img src="images/icons/profile.png" alt="">
+            </div>
+        </div>
     </header>
     <!-- header end -->
      <!-- start Main -->
